--- a/man/icewm-keys.pod
+++ b/man/icewm-keys.pod
@@ -6,29 +6,101 @@
 
 =head1 SYNOPSIS
 
-F<$HOME/.icewm/keys>
+F<> F<$XDG_CONFIG_HOME/icewm/keys>
+ F<$HOME/.icewm/keys>
+ F</usr/share/icewm/keys>
 
 =head1 DESCRIPTION
 
+Global key bindings to launch applications (not window manager related).
+IceWM allows launching of arbitrary programs with any key combination.
+This is configured in the F<keys> file.
+
 =head1 FORMAT
+
+The syntax of the F<keys> file is as follows:
+
+B<>    B<key> B<">I<key_combination>B<"> I<program> I<options>
+
+Where,
+
+=over
+
+=item B<key>
+
+The literal string keyword.
+
+=item I<key_combination>
+
+Any combination of keys, separated by plus-sign (C<+>).
+
+=item I<program> I<options>
+
+I<program> is the name of the executable or full path to the executable
+file that will be run in response to selecting the menu item.  When used
+with the B<menuprog> keyword, the I<program> must print on standard
+output the contents of the menu and is used for dynamic menus.
+
+I<options> is the options and arguments passed to the I<program>
+verbatim.
+
+=back
 
 =head1 EXAMPLES
 
+Following is the example F<keys> file that ships with L<icewm(1)>:
+
+ # This is an example for IceWM's hotkey definition file.
+ #
+ # Place your variants in @CFGDIR@ or in $HOME/.icewm
+ # since modifications to this file will be discarded when
+ # you (re)install icewm.
+ #
+ # A list of all valid keyboard symbols can be found in
+ # /usr/include/X11/keysym.h, keysymdefs.h, XF86keysym.h,
+ # ...  You'll have to omit XK_ prefixs and to replace
+ # XF86XK_ prefixes by XF86. Valid modifiers are Alt,
+ # Ctrl, Shift, Meta, Super and Hyper.
+ #
+ key "Alt+Ctrl+t" xterm
+ key "Alt+Ctrl+b" xdg-open about:blank
+ key "Alt+Ctrl+s" xdg-open http://www.google.com
+ 
+ key "Super+KP_Subtract" amixer sset PCM 5%-
+ key "Super+KP_Add" amixer sset PCM 5%+
+ 
+ # "Multimedia key" bindings for XFree86. Gather the
+ # keycodes of your advanced function keys by watching the
+ # output of the xev command whilest pressing those keys
+ # and map those symbols by using xmodmap.
+ 
+ key "XF86AudioLowerVolume" amixer sset PCM 5%-
+ key "XF86AudioRaiseVolume" amixer sset PCM 5%+
+ key "XF86AudioMute" amixer sset PCM 0%
+ key "XF86HomePage" xdg-open about:blank
+ key "XF86Search" xdg-open http://www.google.com
+ key "XF86Eject" eject
+
 =head1 FILES
 
+Locations for the menu file are as follows:
+
+F<>    F<$XDG_CONFIG_HOME/icewm/keys>
+    F<$HOME/.icewm/keys>
+    F</usr/share/icewm/keys>
+
 =head1 SEE ALSO
+
+L<icewm(1)>.
 
 =head1 AUTHOR
 
 Brian Bidulock L<mailto:bidulock@openss7.org>.
 
-See B<--copying> for full copyright notice and copying permissions.
-
 =head1 LICENSE
 
 B<IceWM> is licensed under the GNU Library General Public License.
-See the F<COPYING> file in the distribution or use the B<--copying> flag
-to display copying permissions.
+See the F<COPYING> file in the distribution.
 
 =cut
 
